admin screen add and moviefilter

--- a/ticketBooking/src/main/resources/application.properties
+++ b/ticketBooking/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=sabari
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 jwt.secret=12345sabariraju_online_movie_ticket_booking
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
