--- a/ticketBooking/src/main/resources/application.properties
+++ b/ticketBooking/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 jwt.secret=12345sabariraju_online_movie_ticket_booking
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
